do not offer explicitely deleted methods for code completion

BUG:306771

Again basically done by Milian.